# libmusic

./: .gitignore  Cargo.toml  README.md  config.json
frontend/: package-lock.json  package.json  svelte.config.js
frontend/src/: app.html
frontend/src/lib/: store.ts
frontend/src/lib/components/: Player.svelte  Playlists.svelte  Queue.svelte  TrackList.svelte
frontend/src/lib/types/: playlist.ts  track.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/about/: +page.svelte
frontend/src/routes/playlist/[id]/: +page.svelte
frontend/static/: globals.css
src/: config.rs  handlers.rs  library.rs  main.rs  repository.rs  responses.rs  state.rs  types.rs
