[package]
name = "libmusic-web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4" }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = "0.37.0"
rusqlite_migration = { version = "2.3.0" }
lofty = "0.22.4"
tokio-util = "0.7.16"